--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Underconstruction</h1>
-<p>Well this is embarassing...</p>
+<h1>Goro was here</h1>
+<p>Ryuji is a loser</p>
+  <br>
+  <p>This is not Aesthetic at all -- Yusuke</p>
 </body>
 </html>
