--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 <p>Ryuji is a loser</p>
   <br>
   <p>This is not Aesthetic at all -- Yusuke</p>
+  <br>
+  <p>[<i>the coder was bored and wanted to renew this site so have a P5 meme while looking at this boring page</i>]</p>
 </body>
 </html>
