--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,1 +1,2 @@
-setting up page...
+<i>setting up page...</i>
+<p>go to <a href="http://lockon-homes.com/portfolio">http://lockon-homes.com/portfolio</a> for now</p>
