--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -262,7 +262,7 @@ window.onload = function () {
                     <p>Nice to meet you! I’m Trisha, currently a freelance artist who specializes in the digita arts like graphic design, vectors, illustrations and web design for 2 years and I still continue to improve and grow as a better artist.</p>
 <p>I've loved digital media with my entire life and I want to use all of my skills and talent to make a brighter future~! <i class="fa fa-smile-o" aria-hidden="true"></i></p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-lg-offset-2">
 			<p>My hobbies during my freetime are drawing, surfing the net, watch western cartoons + anime, and play video games.
 
                 </div>
