--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -264,7 +264,13 @@ window.onload = function () {
                 </div>
                 <div class="col-lg-4 col-lg-offset-2">
 			<p>My hobbies during my freetime are drawing, surfing the net, watch western cartoons + anime, and play video games.
-
+			<strong>Experties:</strong>
+				<ul>
+					<li>Adobe Photoshop</li>
+					<li>Aodbe Dreamweaver<li>
+					<li>Sony Veags Pro</li>
+					<li>HTML5 + CSS3</li>
+					<li>Photo Manipulation</li>
                 </div>
             </div>
         </div>
