--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -263,7 +263,7 @@ window.onload = function () {
 <p>I've loved digital media with my entire life and I want to use all of my skills and talent to make a brighter future~! <i class="fa fa-smile-o" aria-hidden="true"></i></p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2">
-			<p>My hobbies during my freetime are drawing, surfing the net, watch western cartoons + anime, and play video games.
+<p>My hobbies during my freetime are drawing, surfing the net, watch western cartoons + anime, and play video games.</p>
 			<strong>Experties:</strong>
 				<ul>
 					<li>Adobe Photoshop</li>
@@ -271,6 +271,7 @@ window.onload = function () {
 					<li>Sony Veags Pro</li>
 					<li>HTML5 + CSS3</li>
 					<li>Photo Manipulation</li>
+			</ul>
                 </div>
             </div>
         </div>
