--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -262,15 +262,15 @@ window.onload = function () {
                     <p>Nice to meet you! I’m Trisha, currently a freelance artist who specializes in the digita arts like graphic design, vectors, illustrations and web design for 2 years and I still continue to improve and grow as a better artist.</p>
 <p>I've loved digital media with my entire life and I want to use all of my skills and talent to make a brighter future~! <i class="fa fa-smile-o" aria-hidden="true"></i></p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2">
+                <div class="col-lg-4">
 <p>My hobbies during my freetime are drawing, surfing the net, watch western cartoons + anime, and play video games.</p>
 			<strong>Experties:</strong>
 				<ul>
-					<li>Adobe Photoshop</li>
-					<li>Aodbe Dreamweaver<li>
-					<li>Sony Veags Pro</li>
-					<li>HTML5 + CSS3</li>
-					<li>Photo Manipulation</li>
+				<li>Adobe Photoshop</li>
+				<li>Aodbe Dreamweaver<li>
+				<li>Sony Veags Pro</li>
+				<li>HTML5 + CSS3</li>
+				<li>Photo Manipulation</li>
 			</ul>
                 </div>
             </div>
