--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -264,13 +264,14 @@ window.onload = function () {
                 </div>
                 <div class="col-lg-4">
 <p>My hobbies during my freetime are drawing, surfing the net, watch western cartoons + anime, and play video games.</p>
-			<strong>Experties:</strong>
-				<li>Adobe Photoshop</li>
-				<li>Aodbe Dreamweaver<li>
-				<li>Sony Veags Pro</li>
-				<li>HTML5 + CSS3</li>
-				<li>Photo Manipulation</li>
-			</ul>
+			<p><b>Experties:</b>
+				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Adobe Photoshop
+				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Aodbe Dreamweaver
+				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Sony Veags Pro
+				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Clip Studio Paint
+				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; HTML5 + CSS3
+				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Photo Manipulation
+			</p>
                 </div>
             </div>
         </div>
