--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -265,11 +265,11 @@ window.onload = function () {
                 <div class="col-lg-4">
 <p>My hobbies during my freetime are drawing, surfing the net, watch western cartoons + anime, and play video games.</p>
 			<p><b>Experties:</b>
-				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Adobe Photoshop
-				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Aodbe Dreamweaver
-				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Sony Veags Pro
-				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Clip Studio Paint
-				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; HTML5 + CSS3
+				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Adobe Photoshop<br>
+				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Adobe Dreamweaver<br>
+				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Sony Veags Pro<br>
+				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Clip Studio Paint<br>
+				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; HTML5 + CSS3<br>
 				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Photo Manipulation
 			</p>
                 </div>
