--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -264,7 +264,7 @@ window.onload = function () {
                 </div>
                 <div class="col-lg-4">
 <p>My hobbies during my freetime are drawing, surfing the net, watch western cartoons + anime, and play video games.</p>
-			<p><b>Experties:</b>
+			<p><b>Experties:</b><br>
 				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Adobe Photoshop<br>
 				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Adobe Dreamweaver<br>
 				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Sony Veags Pro<br>
