--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -259,7 +259,7 @@ window.onload = function () {
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Nice to meet you! I’m Trisha, currently a freelance artist who specializes in the digita arts like graphic design, vectors, illustrations and web design for 2 years and I still continue to improve and grow as a better artist.</p>
+                    <p>Nice to meet you! I’m Trisha, im a graphic artist who specializes in the digita arts like graphic design, vectors, illustrations and web design for 2 years and I still continue to improve and grow as a better artist.</p>
 <p>I've loved digital media with my entire life and I want to use all of my skills and talent to make a brighter future~! <i class="fa fa-smile-o" aria-hidden="true"></i></p>
                 </div>
                 <div class="col-lg-4">
@@ -360,7 +360,7 @@ window.onload = function () {
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Job Hunting</h3>
-                        <p>I am currently finding a job and willing to work in a company, if interested please <a href="mailto:patricia_gison@yahoo.com" title="Email me" itemprop="email">email&nbsp;me</a> so I can send out my resume or if you just want to say hi, feel free to do so! I don't bite :)</p>
+			    <p>As of <i>06/18/2018</i>, I'm officially hired in a company with the Graphic Artist Position :)</p>
                     </div>
                 </div>
             </div>
