--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -259,7 +259,7 @@ window.onload = function () {
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Nice to meet you! I’m Trisha, im a graphic artist who specializes in the digita arts like graphic design, vectors, illustrations and web design for 2 years and I still continue to improve and grow as a better artist.</p>
+                    <p>Nice to meet you! I’m Trisha, im a graphic artist who specializes in the digita arts like graphic design, vectors, illustrations and web design for more than 3 years and I still continue to improve and grow as a better artist.</p>
 <p>I've loved digital media with my entire life and I want to use all of my skills and talent to make a brighter future~! <i class="fa fa-smile-o" aria-hidden="true"></i></p>
                 </div>
                 <div class="col-lg-4">
