--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -270,7 +270,8 @@ window.onload = function () {
 				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Sony Veags Pro<br>
 				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Clip Studio Paint<br>
 				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; HTML5 + CSS3<br>
-				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Photo Manipulation
+				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; Photo Manipulation<br>
+				<i class="fa fa-check" aria-hidden="true"></i> &nbsp; SketchUp<br>
 			</p>
                 </div>
             </div>
