--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -360,8 +360,8 @@ window.onload = function () {
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Job Hunting</h3>
-			    <p>As of <i>06/18/2018</i>, I'm officially hired in a company with the Graphic Artist Position :)</p>
+                        <h3>Free Space</h3>
+			    <p>I LOVE PIE :)</p>
                     </div>
                 </div>
             </div>
