--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -351,7 +351,7 @@ window.onload = function () {
                                 <a href="https://github.com/resei" class="btn-social btn-outline"><span class="sr-only">GitHub</span><i class="fa fa-github-alt" aria-hidden="true"></i></a>
                             </li>
                             <li>
-                                <a href="https://renami.deviantart.com" class="btn-social btn-outline"><span class="sr-only">DeviantArt</span><i class="fa fa-deviantart" aria-hidden="true"></i></a>
+                                <a href="https://www.pixiv.net/en/users/717997" class="btn-social btn-outline"><span class="sr-only">Pixiv</span><i class="fa fa-product-hunt" aria-hidden="true"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/patricia-isabel-gison-bb158713a/" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
