--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -344,7 +344,7 @@ window.onload = function () {
                     
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Social Media</h3>
+                        <h3>Other Related Stuff</h3>
                         <ul class="list-inline">
                     
                             <li>
